--- a/Namaste_React/01_Inception/index.html
+++ b/Namaste_React/01_Inception/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="script.js"></script>
+  <!-- <script src="App.js"></script> -->
 </head>
 
 <body>
@@ -24,5 +24,13 @@
   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 </body>
+
+<script src="App.js">
+  // const heading = React.createElement("h1", {}, "Hello world from React");
+
+  // const root = ReactDOM.createRoot(document.getElementById("root"));
+
+  // root.render(heading);
+</script>
 
 </html>
