--- a/index.html
+++ b/index.html
@@ -11,27 +11,10 @@
 
 <body>
   <div id="root">
-    <!-- <h1>Hello World</h1> -->
+    <h1>Hello World</h1>
   </div>
-  <!-- hello world with js -->
-  <!-- <script>
-    const heading = document.createElement('h1');
-    heading.innerHTML = 'Hello World form javascript';
-    
-    const root = document.getElementById('root');
-    root.appendChild(heading);
-   </script> -->
-  <!--? injecting react -->
-  <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
 </body>
 
-<script type="module" src="App.js">
-  // const heading = React.createElement("h1", {}, "Hello world from React");
-
-  // const root = ReactDOM.createRoot(document.getElementById("root"));
-
-  // root.render(heading);
-</script>
+<script type="module" src="App.js"></script>
 
 </html>
