--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </div>
 </body>
 
-<script type="module" src="./App.js"></script>
+<script type="module" src="./src/App.js"></script>
 
 </html>
