--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- <script src="App.js"></script> -->
-  <link rel="stylesheet" href="index.css">
+  <link href="./index.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
-  <div id="root">
-    <h1></h1>
+  <div >
+    <h1 class="text-3xl font-bold underline">Hello</h1>
+    <div id="root"></div>
   </div>
 </body>
 
